syntax = "proto3";
package favoriteService;
option go_package = "./;favoriteService";

message DouyinFavoriteActionRequest {
    // @inject_tag: json:"token", form:"token"
    string Token = 1; // 用户鉴权token
    // @inject_tag: json:"video_id", form:"video_id"
    int64 VideoId = 2; // 视频id
    // @inject_tag: json:"action_type", form:"action_type"
    int32 ActionType = 3; // 1-点赞，2-取消点赞
}

message DouyinFavoriteActionResponse {
    // @inject_tag: json:"status_code", form:"status_code"
    int32 StatusCode = 1; // 状态码，0-成功，其他值-失败
    // @inject_tag: json:"status_msg", form:"status_msg"
    string StatusMsg = 2; // 返回状态描述
}

message DouyinFavoriteListRequest {
    // @inject_tag: json:"user_id", form:"user_id"
    int64 UserId = 1; // 用户id
    // @inject_tag: json:"token", form:"token"
    string Token = 2; // 用户鉴权token
}

message DouyinFavoriteListResponse {
    // @inject_tag: json:"status_code", form:"status_code"
    int32 StatusCode = 1; // 状态码，0-成功，其他值-失败
    // @inject_tag: json:"status_msg", form:"status_msg"
    string StatusMsg = 2; // 返回状态描述
    // @inject_tag: json:"video_list", form:"video_list"
    repeated Video VideoList = 3; // 用户点赞视频列表
}

message Video {
    // @inject_tag: json:"id"
    int64 Id = 1; // 视频唯一标识
    // @inject_tag: json:"author"
    User Author = 2; // 视频作者信息
    // @inject_tag: json:"play_url"
    string PlayUrl = 3; // 视频播放地址
    // @inject_tag: json:"cover_url"
    string CoverUrl = 4; // 视频封面地址
    // @inject_tag: json:"favorite_count"
    int64 FavoriteCount = 5; // 视频的点赞总数
    // @inject_tag: json:"comment_count"
    int64 CommentCount = 6; // 视频的评论总数
    // @inject_tag: json:"is_favorite"
    bool IsFavorite = 7; // true-已点赞，false-未点赞
    // @inject_tag: json:"title"
    string Title = 8; // 视频标题
}

message User {
    // @inject_tag: json:"id"
    int64 Id = 1; // 用户id
    // @inject_tag: json:"name"
    string Name = 2; // 用户名称
    // @inject_tag: json:"follow_count"
    int64 FollowCount = 3; // 关注总数
    // @inject_tag: json:"follower_count"
    int64 FollowerCount = 4; // 粉丝总数
    // @inject_tag: json:"is_follow"
    bool IsFollow = 5; // true-已关注，false-未关注
    // @inject_tag: json:"avatar"
    string Avatar = 6; //用户头像
    // @inject_tag: json:"background_image"
    string BackgroundImage = 7; //用户个人页顶部大图
    // @inject_tag: json:"signature"
    string Signature = 8; //个人简介
    // @inject_tag: json:"total_favorited"
    int64 TotalFavorited = 9; //获赞数量
    // @inject_tag: json:"work_count"
    int64 WorkCount = 10; //作品数量
    // @inject_tag: json:"favorite_count"
    int64 FavoriteCount = 11; //点赞数量
}

service FavoriteService {
    rpc FavoriteAction(DouyinFavoriteActionRequest) returns(DouyinFavoriteActionResponse);
    rpc FavoriteList(DouyinFavoriteListRequest) returns(DouyinFavoriteListResponse);
}

/*
protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative favoriteService.proto
protoc --proto_path=. --go_out=paths=source_relative:. favoriteService.proto
*/